Done with documenting property types crud APIs
